WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38565
REGRESSION: composited iframe contents no longer visible after
r58797
https://bugs.webkit.org/show_bug.cgi?id=38565
Summary
REGRESSION: composited iframe contents no longer visible after r58797
Simon Fraser (smfr)
Reported
2010-05-04 22:39:08 PDT
2010-05-04 21:57:31 Simon Fraser: LayoutTests/compositing/iframes/composited-iframe.html no longer shows the iframe contents on Mac after
r58797
. 2010-05-04 22:08:37 Simon Fraser: Patch in src changes. <
rdar://problem/7943945
>
Attachments
Patch with pixel test
(44.79 KB, patch)
2010-05-05 16:46 PDT
,
Chris Marrin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Marrin
Comment 1
2010-05-05 16:46:33 PDT
Created
attachment 55174
[details]
Patch with pixel test
Simon Fraser (smfr)
Comment 2
2010-05-05 16:51:41 PDT
Comment on
attachment 55174
[details]
Patch with pixel test
> Index: WebCore/ChangeLog > =================================================================== > --- WebCore/ChangeLog (revision 58844) > +++ WebCore/ChangeLog (working copy) > @@ -1,3 +1,18 @@ > +2010-05-05 Chris Marrin <
cmarrin@apple.com
> > + > + Reviewed by NOBODY (OOPS!). > + > + Got composited iframes showing up on Mac again > +
https://bugs.webkit.org/show_bug.cgi?id=38565
This should have a bit more verbage saying when it regressed, and what you did to fix it.
> Index: LayoutTests/compositing/iframes/composited-iframe-alignment.html > ===================================================================
> + <script type="text/javascript" charset="utf-8"> > + //if (window.layoutTestController) { > + // layoutTestController.dumpAsText(); > + layoutTestController.waitUntilDone(); > + //}
Why the commented out lines?
> + <!-- The parent document should be thrown into compositing mode by the iframe. -->
That's not true on Mac. r=me with a better changelog and test cleanup.
Chris Marrin
Comment 3
2010-05-05 17:05:58 PDT
Landed in
http://trac.webkit.org/changeset/58845
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug